feat(core): remove boilerplate setup code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <!-- Generic meta tags -->
+        <!-- To do later -->
+        <meta name="icon" content="" />
+        <meta charset="UTF-8" />
+        <title>Freenance | Budget Tacker</title>
+        <meta name="author" content="freenance" />
+        <meta
+            name="description"
+            content="Track your expenses and incomes for free with this cutting edge budget tracker."
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="keywords" content="free, expense, saving, income, tracker, budget, budget-tracker, online" />
+        <meta name="robots" content="index, nofollow" />
+        <meta name="canonical" content="https://www.freenance.com" />
+
+        <!-- Open Graph SEO meta tags -->
+        <!-- To do later -->
+        <meta name="og:image" content="" />
+        <meta name="og:type" content="page" />
+        <meta name="og:title" content="Freenance | Budget Tacker" />
+        <meta
+            name="og:description"
+            content="Track your expenses and incomes for free with this cutting edge budget tracker."
+        />
+        <meta name="og:url" content="https://www.freenance.com" />
+
+        <!-- Twitter SEO meta tags -->
+        <!-- To do later -->
+        <meta name="twitter:image" content="" />
+        <meta
+            name="twitter:description"
+            content="Track your expenses and incomes for free with this cutting edge budget tracker."
+        />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="Freenance | Budget Tacker" />
+        <meta name="twitter:url" content="https://www.freenance.com" />
+
+        <!-- Css styles files -->
+
+        <!-- Javascript scripts files -->
+        <script type="module" src="src/main.tsx" defer></script>
+    </head>
+
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
