feat(core): implement boilerplate static header

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <meta name="twitter:url" content="https://www.freenance.com" />
 
         <!-- Css styles files -->
+        <link rel="stylesheet" href="src/variables.css" />
+        <link rel="stylesheet" href="src/main.css" />
 
         <!-- Javascript scripts files -->
         <script type="module" src="src/main.tsx" defer></script>
