--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <meta name="twitter:url" content="https://www.freenance.com" />
 
         <!-- Css styles files -->
-        <link rel="stylesheet" href="src/variables.css" />
-        <link rel="stylesheet" href="src/main.css" />
+        <link rel="stylesheet" href="assets/styles/main.css" />
 
         <!-- Javascript scripts files -->
         <script type="module" src="src/main.tsx" defer></script>
